--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,11 @@ base {
 }
 
 repositories {
+
+	// ...
+	maven {
+		url = "https://api.modrinth.com/maven"
+	}
 	// Add repositories to retrieve artifacts from in here.
 	// You should only use this when depending on other mods because
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
@@ -30,7 +35,10 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+
+	//MTR Implementation
+	modImplementation "maven.modrinth:XKPAmI6u:gUMwSYv5"
+
 }
 
 processResources {
