--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,10 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	//MTR Implementation
+	//modImplementation "maven.modrinth:XKPAmI6u:gUMwSYv5"
 	modImplementation "maven.modrinth:XKPAmI6u:gUMwSYv5"
+
+	//modImplementation "maven.modrinth:org.mtr:Minecraft-Mappings-fabric-1.20.4:0.0.1-dev"
 
 }
 
